Bug 122285 - Tasks pane too short
Summary: Tasks pane too short
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0.2
Keywords:
Depends on:
Blocks: gtk3-whipping-boy
  Show dependency treegraph
 
Reported: 2018-12-23 04:03 UTC by Terrence Enger
Modified: 2019-01-02 09:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
tail of terminal output from bibisect (1.92 KB, text/plain)
2018-12-23 04:05 UTC, Terrence Enger
Details
bisect: tail of terminal output (2.06 KB, text/plain)
2018-12-23 14:47 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Terrence Enger 2018-12-23 04:03:34 UTC
Working on a display of 1600 by 900 pixels, on debian-buster, with
daily Linux dbgutil bibisect repository version 2018-12-18, with
SAL_USE_VCLPLUGIN=gtk3, I created a new embedded Firebird database.
With <Tables> selected in the Database pane, the Tasks pane is too
short, resulting in
  - only two tasks are shown
  - there is a scrollbar to the right of the tasks
  - mouseover on the second displayed task scrolls down
  - upon mouseover on a displayed task, the description in the right
    side of the pane is cut off part way down the text.

Note that I do not see the problem 
  - if SAL_USE_VCLPLUGIN=gen
  - if opening an existing .odb
  - if create embedded HSQLDB
Comment 1 Terrence Enger 2018-12-23 04:05:39 UTC
Created attachment 147780 [details]
tail of terminal output from bibisect

Working on debian-buster in the daily Linux dbgutil bibisect
repository, I see that the problem started somewhere in the 58 or so
commits:

          commit    date        s-h
          --------  ----------  --------
    good  2d9d00fb  2018-12-14  a4812a58
    bad   3a1a408b  2018-12-15  4f4f7464

I am setting keywords regression, bibisected.
Comment 2 Terrence Enger 2018-12-23 14:47:26 UTC
Created attachment 147786 [details]
bisect: tail of terminal output

I have located the problem to 

    commit 4f4f74642838d19278339fac9f8bc75ed8bfe1d5 (HEAD, refs/bisect/bad)
    Author: Caolán McNamara <caolanm@redhat.com>
    Date:   Fri Dec 14 15:22:59 2018 +0000

        tdf#116290 allow menubar to shrink past its minimum size
    
        with a scrolledwindow with a horizontal external policy which doesn't
        show a scrollbar, but allows the scrolledwindow to shrink past its
        child size
    
        Change-Id: Ia73fc819a16bef49008e7e41bcc2d523c28268b0
        Reviewed-on: https://gerrit.libreoffice.org/65171
        Tested-by: Jenkins
        Reviewed-by: Caolán McNamara <caolanm@redhat.com>
        Tested-by: Caolán McNamara <caolanm@redhat.com>

I am adding Caolán to cc.  Okay, Caolán?

I am adding keyword bisected.
Comment 3 Caolán McNamara 2018-12-23 18:05:22 UTC
I have doubts about the bisection, I seem to see this in 6-1 as well
Comment 4 Caolán McNamara 2018-12-23 19:36:53 UTC
definitely happens anyway and it would be better if it didn't. I think I can see a solution for this
Comment 5 Commit Notification 2018-12-23 21:24:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/092d005fe0368c57502479bc79fcee63ce07fa48%5E%21

Resolves: tdf#122285 task panel too short

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2018-12-23 21:25:42 UTC
That seems to work for me, backport to 6-2 in gerrit
Comment 7 Terrence Enger 2018-12-24 18:38:49 UTC
I see the bug fixed in a local build of commit a4c46cee.  I am setting
status VERIFIED FIXED.

Thank you, Caolán.
Comment 8 Commit Notification 2019-01-02 09:30:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/de2fca657c3cf31e1f9e21bbd50b887f7cca9216%5E%21

Resolves: tdf#122285 task panel too short

It will be available in 6.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.