Resolves: tdf#122285 task panel too short

there are a bunch of resizes as base starts up, and base will position
the splitwin on the first time its big enough to place it and gets stuck
too high up, before it goes full size.

We don't want this jumping around on every subsequent user size, but we do
want it to get placed at the final size during the load.

So post the resize event to occur on idle, and when it finally gets a chance
to run we'll be at our final size and the placement is good

Change-Id: Iccb169bac93a5cf8bc931945bc7e1b71c6c9dd23